...
     Presents a UIAlertController that gets youtube video URL from user
     
     - parameter sender: button
     */
    func askUserForURL(sender: AnyObject) {
        
        let alertController = UIAlertController(title: "Download YouTube Video", message: "Video will be downloaded in 720p", preferredStyle: .Alert)
        
        let saveAction = UIAlertAction(title: "Ok", style: .Default) { action in
            let textField = alertController.textFields![0]
            
            if let text = textField.text {
                self.createEntityFromVideoUrl(text)
            }
        }
        
        let cancelAction = UIAlertAction(title: "Cancel", style: .Cancel, handler: nil)
        alertController.addTextFieldWithConfigurationHandler() { textField in
            textField.placeholder = "Enter YouTube video URL"
        }
        
        alertController.addAction(saveAction)
        alertController.addAction(cancelAction)
        
        self.presentViewController(alertController, animated: true, completion: nil)
...
                abort()
            }
            
        } else {
            //Not a valid URL, show alert
            
            let alertController = UIAlertController(title: "Error", message: "Not a valid YouTube URL", preferredStyle: .Alert)
            let cancelAction = UIAlertAction(title: "Cancel", style: .Cancel, handler: nil)
            alertController.addAction(cancelAction)
            
            self.presentViewController(alertController, animated: true, completion: nil)
        
        }
...
